--- a/UI/Homework1/mystyle.css
+++ b/UI/Homework1/mystyle.css
@@ -9,38 +9,32 @@
 	}
 
 	/*header*/
-	#id > img {
+	#logo > img {
 		max-height: 150px;
+		max-width: 100%;
 	}
 
-	body > header > nav {
-		border-top-style: ridge;
-		border-bottom-style: ridge;
-		margin-bottom: 5px;
-		padding-bottom: 10px;
-		padding-top: 10px;
-		border-bottom-width: 1px;
-		border-top-width: 1px;
-	}
-
-	body > header > nav > li > div {
+	#line0 > li > div {
 		float: right;
 		display: flex;
 	}
 
-	body > header > nav > li:nth-child(5) > div{
+	#line0 > li:nth-child(5) > div{
 		margin-right: 3px;
 	}
 
-	body > header > nav > li > div > img {
+	#line0 > li > div > img {
 		height: 25px;
 		width: 25px;
 		background: darkgray;
 		position: relative;
 		top: -5px;
 	}
-	body > header > nav > li > div > img:hover{
+	#line0 > li > div > img:hover{
 		background: cornflowerblue;
+	}
+	a:hover{
+		color: cornflowerblue;
 	}
 
 	/*content*/
@@ -48,80 +42,180 @@
 	/*1st line*/
 	#main_image > img {
 		width: 100%;
-		margin-top: 15px;
-		margin-bottom: 15px;
 	}
 
 	/*2nd line*/
 
-	body > div > div.line {
-		display: inline-flex;
+	.line {
 		max-height: 30px;
 		padding-bottom: 10px;
 		padding-top: 10px;
-		border-bottom-style: ridge;
-		border-top-style: ridge;
+		border-style: ridge;
 		border-bottom-width: 1px;
 		border-top-width: 1px;
-	}
-
-	#line1{
-		
+		margin-top: 15px;
+		margin-bottom: 15px;
 	}
 
 	.line > img{
+		max-height: 30px;
+	}
+
+	#line1{
+		display: inline-flex;
+	}
+
+	#line1 > img{
 		width: 40%;
 	}
 
-	.line > div{
+	#line1 > div{
 		width: 20%;
 		text-align: center;
 		padding-top: 8px;
 	}
 
-	/*3nd line*/
+	/*3rd line*/
 
-	body > div > div:nth-child(3) { 
+	#pic { 
 		display: inline-flex;
 		max-height: 150px;
 		padding-top: 10px;
 		padding-bottom: 10px;
 	}
 
-	body > div > div:nth-child(3) > img{
+	#pic > img{
 		width: 30%;
 	}
 
-	body > div > div:nth-child(3) > img:nth-child(3){
+	#pic > img:nth-child(3){
 		margin-left: auto;
 	}
-	body > div > div:nth-child(3) > img:nth-child(1){
+	#pic > img:nth-child(1){
 		margin-right: auto;
 	}
 
-	/*4nd line*/
-	body > div > div:nth-child(4) {
+	/*4th line*/
+	#line2 {
 		width: 100%;
 	}
 
-	body > div > div:nth-child(4) > img{
+	#line2 > img{
 		width: 100%;
-		max-height: 30px;
 	}
 
-	body > div > div:nth-child(4) > div{
+	#line2 > p{
 		position: relative;
-		top: -25px;
 		text-align: center;
+		top:-25px;
 	}
-	body > div > div:nth-child(5){
+	#text1{
 		text-align: -webkit-center;
 		color: darkgray;
 	}
 
+	.line >div> img{
+		max-height: 30px;
+	}
+
+	#line3{
+		display: inline-flex;
+		width: 100%;
+	}
+
+	#col1{
+		width: 48%;
+	}
+
+	#col1 > img{
+		width: 100%;
+		max-height: 30px;
+	}
+
+
+	#col3 > img{
+		width: 100%;
+		float: right;
+	}
+
+	#col3{
+		width: 49%;
+		float: right;
+	}
+	#col2{
+		width: 2%;
+	}
+
+	#col1 > img:nth-child(2){
+		max-height: 200px;
+		margin-top: 10px;
+	}
+	#col3 > img:nth-child(2){
+		max-height: 200px;
+		margin-top: 15px;
+	}
+
+	body > footer{
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+
+	body > footer > nav{
+		width: 100%;
+	}
+
+	body > footer > nav > li{
+		float: right;
+		margin-right: 5px;
+	}
+
+	body > footer > nav > li:nth-child(1){
+		float: left;
+	}
+
+	/*mobile*/
+
+	@media screen and (max-width: 480px) {
+		body {
+		margin: 5px 25% 5px 25%;
+		}
+		#pic { 
+		display: inline;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		}
+		#pic > img{
+			width: 100%;
+		}
+
+		#line3{
+		display: block;
+		width: 100%;
+		}
+
+		#col1{
+			width: 100%;
+		}
+		 #col3{
+			width: 100%;
+		}
+		#col2{
+			width: 0%;
+		}
+
+		#logo > img {
+		max-height: 100px;
+		width: 100%;
+		}
+		body > footer > nav > li:nth-child(2){
+			display: none;
+		}
+		body > footer > nav > li:nth-child(3){
+			display: none;
+		}
+		body > footer > nav > li:nth-child(4){
+			display: none;
+		}
+	}
+
 	
-
-
-
-
-
