--- a/UI/Homework1/normalize.css
+++ b/UI/Homework1/normalize.css
@@ -46,5 +46,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+a{
+	text-decoration: none;
+    color: black;
+}
 Status API Training Shop Blog About
 © 2016 GitHub, Inc. Terms Privacy Security Contact Help
